--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2024"
 glob = "0.3.0"
 
 [dependencies]
+lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
+multiboot2 = { version = "0.23.1", default-features = false }
 paste = "1.0.15"
+spin = "0.10.0"
