--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,16 @@
-[package]
-name = "proka-kernel"
-version = "0.1.0"
+[workspace]
+members = ["kernel"]
+resolver = "2"
+
+[workspace.package]
 edition = "2024"
+repository = "https://github.com/RainSTR-Studio/proka-kernel"
+authors = ["RainSTR Studio"]
 
-[build-dependencies]
-glob = "0.3.0"
-
-[dependencies]
+[workspace.dependencies]
 lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
 multiboot2 = { version = "0.23.1", default-features = false }
 paste = "1.0.15"
 spin = "0.10.0"
 x86_64 = "0.15.2"
+
