--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
 multiboot2 = { version = "0.23.1", default-features = false }
 paste = "1.0.15"
 x86_64 = "0.15.2"
-
+uart_16550 = "0.3.2"
+spin = "0.10.0"
