--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,11 +7,10 @@ edition = "2024"
 glob = "0.3.0"
 
 [dependencies]
-multiboot2 = { workspace = true }
-x86_64 = { workspace = true }
-lazy_static = { workspace = true }
-paste = { workspace = true }
-uart_16550 = { workspace = true }
-spin = { workspace = true }
-libm = { workspace = true }
-linked_list_allocator = { workspace = true }
+lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
+limine = "0.5.0"
+linked_list_allocator = "0.10.5"
+paste = "1.0.15"
+spin = "0.10.0"
+uart_16550 = "0.4.0"
+x86_64 = "0.15.2"
