--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2024"
 glob = "0.3.0"
 
 [dependencies]
+glam = { version = "0.30.5", default-features = false, features = ["libm"] }
 lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
+libm = "0.2.15"
 limine = "0.5.0"
 linked_list_allocator = "0.10.5"
 paste = "1.0.15"
