--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 glob = "0.3.0"
 
 [dependencies]
+ab_glyph = { version = "0.2.31", default-features = false, features = ["libm"] }
 glam = { version = "0.30.5", default-features = false, features = ["libm"] }
 lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
 libm = "0.2.15"
@@ -14,5 +15,6 @@ limine = "0.5.0"
 linked_list_allocator = "0.10.5"
 paste = "1.0.15"
 spin = "0.10.0"
+talc = "4.4.3"
 uart_16550 = "0.4.0"
 x86_64 = "0.15.2"
