--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -14,6 +14,7 @@ libm = "0.2.15"
 limine = "0.5.0"
 linked_list_allocator = "0.10.5"
 paste = "1.0.15"
+raw-cpuid = "11.5.0"
 spin = "0.10.0"
 talc = "4.4.3"
 uart_16550 = "0.4.0"
