--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -8,6 +8,7 @@ glob = "0.3.0"
 
 [dependencies]
 ab_glyph = { version = "0.2.31", default-features = false, features = ["libm"] }
+bitmap-allocator = "0.2.0"
 glam = { version = "0.30.5", default-features = false, features = ["libm"] }
 lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
 libm = "0.2.15"
