--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -14,6 +14,7 @@ lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
 libm = "0.2.15"
 limine = "0.5.0"
 linked_list_allocator = "0.10.5"
+log = "0.4.27"
 paste = "1.0.15"
 raw-cpuid = "11.5.0"
 spin = "0.10.0"
