--- a/assets/rootfs/limine/limine.conf
+++ b/assets/rootfs/limine/limine.conf
@@ -3,4 +3,4 @@ timeout: 3
 /proka-kernel
 	protocol: limine
 	kernel_path: boot():/kernel
-	module_path: boot():/initrd.img
+	module_path: boot():/initrd.cpio
