--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -16,6 +16,7 @@ limine = "0.5.0"
 linked_list_allocator = "0.10.5"
 log = "0.4.27"
 paste = "1.0.15"
+pic8259 = "0.11.0"
 raw-cpuid = "11.5.0"
 spin = "0.10.0"
 talc = "4.4.3"
