docs(kernel): 更新内核配置文件标题和描述

--- a/kernel/src/output/Kconfig.toml
+++ b/kernel/src/output/Kconfig.toml
@@ -1,4 +1,4 @@
-title = "Kernel Output Configuration"
+title = "Output"
 
 [[config]]
 name = "SERIAL_LOG_PORT"
@@ -6,4 +6,3 @@ type = "hex"
 default = 0x3F8
 desc = "Serial Port for Logging"
 help = "The I/O port address for the serial port used for kernel logging (default 0x3F8 is COM1)."
-
