--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [build-dependencies]
-anaxa-builder = { version = "0", default-features = false }
+anaxa-builder = "0.3.5"
 glob = "0.3.0"
 
 [dependencies]
